--- a/style.css
+++ b/style.css
@@ -143,7 +143,16 @@ li li {
 
 /* Markup styles */
 pre {
+  white-space: pre-wrap;
+  /* css-3 */
+  white-space: -moz-pre-wrap;
+  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;
+  /* Opera 4-6 */
+  white-space: -o-pre-wrap;
+  /* Opera 7 */
   word-wrap: break-word;
+  /* Internet Explorer 5.5+ */
   background: #f7f7f7;
   border: solid 1px #ededed;
   padding: 0.75em 1.5em;
